--- a/src/app/features/administration/components/profile/administration.component.html
+++ b/src/app/features/administration/components/profile/administration.component.html
@@ -12,7 +12,7 @@
     
     <ul class="nav nav-tabs mb-3" id="ex1" role="tablist">
         <li class="nav-item" role="presentation">
-            <a class="nav-link" id="ex1-tab-1" data-bs-toggle="tab" href="#ex1-tabs-1" role="tab" aria-controls="ex1-tabs-1"
+            <a *ngIf="showTabs" class="nav-link" id="ex1-tab-1" data-bs-toggle="tab" href="#ex1-tabs-1" role="tab" aria-controls="ex1-tabs-1"
                 aria-selected="false">Organization Profile</a>
         </li>
         <li class="nav-item" role="presentation">
@@ -20,19 +20,19 @@
                 aria-controls="ex1-tabs-2" aria-selected="true">Manage Account</a>
         </li>
         <li class="nav-item" role="presentation">
-            <a class="nav-link" id="ex1-tab-3" data-bs-toggle="tab" href="#ex1-tabs-3" role="tab" aria-controls="ex1-tabs-3"
+            <a *ngIf="showTabs" class="nav-link" id="ex1-tab-3" data-bs-toggle="tab" href="#ex1-tabs-3" role="tab" aria-controls="ex1-tabs-3"
                 aria-selected="false">Manage Users</a>
         </li>
         <li class="nav-item" role="presentation">
-            <a class="nav-link" id="ex1-tab-4" data-bs-toggle="tab" href="#ex1-tabs-4" role="tab" aria-controls="ex1-tabs-4"
+            <a *ngIf="showTabs" class="nav-link" id="ex1-tab-4" data-bs-toggle="tab" href="#ex1-tabs-4" role="tab" aria-controls="ex1-tabs-4"
                 aria-selected="false">Dashboard</a>
         </li>
         <li class="nav-item" role="presentation">
-            <a class="nav-link" id="ex1-tab-5" data-bs-toggle="tab" href="#ex1-tabs-5" role="tab" aria-controls="ex1-tabs-5"
+            <a *ngIf="showTabs" class="nav-link" id="ex1-tab-5" data-bs-toggle="tab" href="#ex1-tabs-5" role="tab" aria-controls="ex1-tabs-5"
                 aria-selected="false">Theme</a>
         </li>
         <li class="nav-item" role="presentation">
-            <a class="nav-link" id="ex1-tab-6" data-bs-toggle="tab" href="#ex1-tabs-6" role="tab" aria-controls="ex1-tabs-6"
+            <a *ngIf="showTabs" class="nav-link" id="ex1-tab-6" data-bs-toggle="tab" href="#ex1-tabs-6" role="tab" aria-controls="ex1-tabs-6"
                 aria-selected="false">Integrations</a>
         </li>
     </ul>
