--- a/src/app/features/base/components/header/header.component.html
+++ b/src/app/features/base/components/header/header.component.html
@@ -17,13 +17,18 @@
             </div>
           </div>
         </div>
-        <div class="dropdown profile" style="padding: 0 1rem">
-          <img src="../../../../../assets/images/jane-doe.png" alt="john doe">
-          <div class="dropdown-content" style="font-size: 12px; min-width: 80px;">
-            <a href="/home/administration">Profile</a>
-            <!--<a href="#">Settings</a>-->
-            <a href="/" (click)="logout()">Logout</a>
-          </div>
+        <div class="dropdown profile">
+          <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <span>
+              <img [src]="getUserImage()" class="rounded-circle">
+              {{user.name}}
+            </span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" (click)="navigateAccount()">Profile</a></li>
+            <li><a class="dropdown-item" href="#">Settings</a></li>
+            <li><a class="dropdown-item"  (click)="logout()">Logout</a></li>
+          </ul>
         </div>
 
       </div>
