--- a/src/app/features/administration/components/staff-performance/view-employee-transactions/view-employee-transactions.component.html
+++ b/src/app/features/administration/components/staff-performance/view-employee-transactions/view-employee-transactions.component.html
@@ -1,13 +1,16 @@
 <div class="mx-4 my-4">
 
-  <div class="col-12">
+  <div class="row">
+    <div class="col-12">
 
-    <button type="button" class="btn float-end" id="btn-help">
-      <i class="fa fa-question-circle" style="color:#00529B;"></i>
-    </button>
-    <label class="btn float-end" style="color: var(--primary-color);">Help</label>
+      <button type="button" class="btn float-end" id="btn-help">
+        <i class="fa fa-question-circle" style="color:#00529B;"></i>
+      </button>
+      <label class="btn float-end" style="color: var(--primary-color);">Help</label>
 
+    </div>
   </div>
+
   <form [formGroup]="sortingForm" style="background: none; display: contents">
     <div class="row col-lg-6 pb-2">
 
