product definition and setup wizard changes

--- a/src/app/features/gis/components/setups/components/product/product-definition/product-definition.component.html
+++ b/src/app/features/gis/components/setups/components/product/product-definition/product-definition.component.html
@@ -160,7 +160,6 @@
                               formControlName="{{data.name}}" id="{{data.name}}">
                           </div>
 
-
                         </div>
                       </div>
                     </div>
@@ -180,9 +179,8 @@
                     <form [formGroup]="testForm">
                       <div class="mandatory">
                         <div class="form-row">
-                          <label for="{{data.name}}" class="col-sm-4 col-form-label">{{data.label}}:</label>
+                          <label for="{{data.name}}" class="col-sm-4 col-form-label labels">{{data.label}}:</label>
                           <div class="form-group col-md-8 ">
-
                             <input type="{{data.type}}" class="form-control form-control-sm mb-2"
                               formControlName="{{data.name}}" id="{{data.name}}">
 
