--- a/src/app/features/entities/components/edit/edit.component.html
+++ b/src/app/features/entities/components/edit/edit.component.html
@@ -8,7 +8,7 @@
 </app-dynamic-form> -->
 
 <div class="mx-4 my-4">
-  <h6 style="font-size: 13px;">{{ partyAccountDetails?.partyType?.partyTypeName }} {{'Details' | uppercase}}</h6>
+  <h6 style="font-size: 13px;">{{ partyAccountDetails?.partyType?.partyTypeName | uppercase }} {{'Details' | uppercase}}</h6>
   <ul class="nav nav-tabs" id="ex1" role="tablist">
     <li class="nav-item" role="presentation">
       <a class="nav-link active" id="ex1-tab-1" data-bs-toggle="tab" href="#ex1-tabs-1" role="tab"
