--- a/src/app/features/gis/components/setups/components/client-insured/interested-parties/interested-parties.component.html
+++ b/src/app/features/gis/components/setups/components/client-insured/interested-parties/interested-parties.component.html
@@ -30,7 +30,7 @@
                                 optionLabel="name"
                                 (click)="selected && loadInterestedParties(selected.code)" 
                                 [showClear]="true"
-                                [style]="{'height':'40px','width':'100%'}"
+                                [style]="{'height':'40px','width':'100%',}"
                                 placeholder="Select an option">
                     </p-dropdown>
               </div>
@@ -65,11 +65,10 @@
               border-radius: 5px;">
               <div class="card-body">
                   <p class="title3" >Interested Parties</p>
-                  <hr>
+                  <br>
               <div class="content"  >
                   <form [formGroup]="partyForm">
                    <div class="row">
-                    
                     <div class="col-xl-6">
                           <div class="row">
                             <div class="col-xl-4">
@@ -141,15 +140,12 @@
                    </div>
                   </form>
                   <br>
-                  <hr>
                   <div class="row">
-                    <div class="col-8"></div>
-                    <div class="col-4">
-                      <div class="row">
-                        <div class="col-xl-6 "><button class="btn btn waves-effect waves-light" id="clear" (click)="newParty()" >Clear</button></div>
-                        <br><br>
-                        <div class="col-xl-6"><button class="btn btn waves-effect waves-light" id="save" (click)="save()">Save</button></div>
-                      </div>
+                    <div class="col-6">
+                      <button class="btn btn waves-effect waves-light" id="clear" (click)="newParty()" >Clear</button>
+                    </div>
+                    <div class="col-6 d-flex justify-content-end">
+                      <button class="btn btn waves-effect waves-light" id="save" (click)="save()">Save</button>
                     </div>
                   </div>
       
