--- a/src/app/features/gis/components/setups/components/tax/tax-rates/tax-rates.component.html
+++ b/src/app/features/gis/components/setups/components/tax/tax-rates/tax-rates.component.html
@@ -23,21 +23,29 @@
             </div>
           </div>
           <br>
-          <form class="form-inline  form-sm mb-3 ms-1">
-            <input class="form-control form-control-sm mr-4" type="text" placeholder="Search tax" aria-label="Search" id="search-input" [(ngModel)]="filterBy" >
-            <i class="pi pi-search" id="search"></i>
-        </form>
-          <div class="TransactionList">
-            <ul class="list-group list-group-light" *ngFor="let data of filteredTransactionList ">
-              <li class="list-group-item list-group-item-action px-3 border-0" (click)="selectedTaxRate(data.code, data)" id="TransactionList">{{ data.description }}</li>
-            </ul>
-            <div class="d-flex justify-content-center">
-              <div class="spinner-border text-primary" role="status">
-                <span class="visually-hidden">Loading...</span>
-              </div>
-            </div>
-          </div>
-  
+        <div class="input-group mb-3">
+          <input type="text" 
+                 class="form-control me-2" 
+                 placeholder="Search Tax"
+                 aria-label="search" 
+                 aria-describedby="search" 
+                 (keyup)="filterTransaction($event)"
+                 id="search-input"
+                 >
+          <span class="input-group-text" id="search">
+              <i class="fa-solid fa-magnifying-glass" ></i>
+          </span>
+      </div>
+      <div class="TransactionList">
+        <ul class="list-group list-group-light"  >
+            <li class="list-group-item list-group-item-action px-3 border-0" 
+                      *ngFor="let data of filteredTransaction"
+                      (click)="selectedTaxRate(data.code, data)"
+                      id="TransactionList">
+                      {{ data.description}}
+            </li>
+          </ul>
+    </div>
         </div>
   
       </div>
@@ -91,7 +99,7 @@
                             <div class="form-group row">
                               <label for="addChargesInput" class="col-5 col-form-label" id="addChargesLabel">Application Area</label>
                               <div class="col-7">
-                                <select class="form-control form-control-sm mb-1" id="addChargesInput" formControlName="applicationArea">
+                                <select class="form-select form-control-sm mb-1" id="addChargesInput" formControlName="applicationArea">
                                   <option value="U">Underwriting</option>
                                   <option value="R">Reinsuarance</option>
                                   <option value="C">Claims</option>
@@ -103,7 +111,7 @@
                             <div class="form-group row">
                               <label for="addChargesInput" class="col-5 col-form-label" id="addChargesLabel">Application Level</label>
                               <div class="col-7">
-                                <select class="form-control form-control-sm mb-1" id="addChargesInput" formControlName="applicationLevel">
+                                <select class="form-select form-control-sm mb-1" id="addChargesInput" formControlName="applicationLevel">
                                   <option value="P">Policy Level</option>
                                   <option value="R">Risk Level</option>
                                 </select>
@@ -114,7 +122,7 @@
                             <div class="form-group row">
                               <label for="addChargesInput" class="col-5 col-form-label" id="addChargesLabel">Transaction Type</label>
                               <div class="col-7">
-                                <select class="form-control form-control-sm mb-1" id="addChargesInput" formControlName="transactionLevelCode">
+                                <select class="form-select form-control-sm mb-1" id="addChargesInput" formControlName="transactionLevelCode">
                                   <option value="UP">Underwriting Premium</option>
                                   <option value="SI">Sum Insured</option>
                                 </select>
@@ -176,7 +184,7 @@
                             <div class="form-group row">
                               <label for="minmax-buttons" class="col-5 col-form-label" id="addChargesLabel"> Rate Description</label>
                               <div class="col-7">
-                                <select class="form-control form-control-sm mb-1" id="addChargesInput" formControlName="rateDescription">
+                                <select class="form-select form-control-sm mb-1" id="addChargesInput" formControlName="rateDescription">
                                   <option value="Percent">Percent</option>
                                   <option value="Per Mile">Per Mille</option>
                                   <option value="Amount">Amount</option>
@@ -192,7 +200,7 @@
                             <div class="form-group row">
                               <label for="minmax-buttons" class="col-5 col-form-label" id="addChargesLabel">Tax Type</label>
                               <div class="col-7">
-                                <select class="form-control form-control-sm mb-1" id="addChargesInput" formControlName="rateType">
+                                <select class="form-select form-control-sm mb-1" id="addChargesInput" formControlName="rateType">
                                   <option value="FXD">Fixed</option>
                                   <option value="RCU">Recurring</option>
                                   <option value="STEP">Range(step)</option>
@@ -233,7 +241,7 @@
                             <div class="form-group row">
                               <label for="minmax-buttons" class="col-5 col-form-label" id="addChargesLabel">Rate Category</label>
                               <div class="col-7">
-                                <select class="form-control form-control-sm mb-1" id="addChargesInput" formControlName="rateCategory">
+                                <select class="form-select form-control-sm mb-1" id="addChargesInput" formControlName="rateCategory">
                                   <option value="TX">Tax</option>
                                   <option value="AC">Additional Charge</option>
                                   <option value="DT">Deductible</option>
@@ -250,14 +258,9 @@
                           <button type="button" class="btn btn-outline-primary " id="cancel"
                           data-bs-dismiss="modal" (click)="cancel()">Cancel</button>
                         </div>
-                        <div class="col-6">
-                          <div class="row">
-                            <div class="col-8">
-                            </div>
-                            <div class="col-4">
-                              <button type="button" class="btn btn-primary" id="ok" data-bs-dismiss="modal" (click)="AddChargeDeductibles()" >Ok</button>
-                            </div>
-                          </div>
+                        <div class="col-6 d-flex justify-content-end">
+                          <button type="button" class="btn btn-primary" id="ok" data-bs-dismiss="modal" (click)="AddChargeDeductibles()" >Save</button>
+                          
                         </div>
                       </div>
                     </div>
@@ -280,7 +283,7 @@
                             <div class="form-group row">
                               <label for="addChargesInput" class="col-5 col-form-label" id="addChargesLabel">Application Area</label>
                               <div class="col-7">
-                                <select class="form-control form-control-sm mb-1" id="addChargesInput" formControlName="applicationArea">
+                                <select class="form-select form-control-sm mb-1" id="addChargesInput" formControlName="applicationArea">
                                   <option value="U">Underwriting</option>
                                   <option value="R">Reinsuarance</option>
                                   <option value="C">Claims</option>
@@ -292,7 +295,7 @@
                             <div class="form-group row">
                               <label for="addChargesInput" class="col-5 col-form-label" id="addChargesLabel">Application Level</label>
                               <div class="col-7">
-                                <select class="form-control form-control-sm mb-1" id="addChargesInput" formControlName="applicationLevel">
+                                <select class="form-select form-control-sm mb-1" id="addChargesInput" formControlName="applicationLevel">
                                   <option value="P">Policy Level</option>
                                   <option value="R">Risk Level</option>
                                 </select>
@@ -303,7 +306,7 @@
                             <div class="form-group row">
                               <label for="addChargesInput" class="col-5 col-form-label" id="addChargesLabel">Transaction Type</label>
                               <div class="col-7">
-                                <select class="form-control form-control-sm mb-1" id="addChargesInput" formControlName="transactionLevelCode">
+                                <select class="form-select form-control-sm mb-1" id="addChargesInput" formControlName="transactionLevelCode">
                                   <option value="UP">Underwriting Premium</option>
                                   <option value="SI">Sum Insured</option>
                                 </select>
@@ -365,7 +368,7 @@
                             <div class="form-group row">
                               <label for="minmax-buttons" class="col-5 col-form-label" id="addChargesLabel"> Rate Description</label>
                               <div class="col-7">
-                                <select class="form-control form-control-sm mb-1" id="addChargesInput" formControlName="rateDescription">
+                                <select class="form-select form-control-sm mb-1" id="addChargesInput" formControlName="rateDescription">
                                   <option value="Percent">Percent</option>
                                   <option value="Per Mile">Per Mille</option>
                                   <option value="Amount">Amount</option>
@@ -381,7 +384,7 @@
                             <div class="form-group row">
                               <label for="minmax-buttons" class="col-5 col-form-label" id="addChargesLabel">Tax Type</label>
                               <div class="col-7">
-                                <select class="form-control form-control-sm mb-1" id="addChargesInput" formControlName="rateType">
+                                <select class="form-select form-control-sm mb-1" id="addChargesInput" formControlName="rateType">
                                   <option value="FXD">Fixed</option>
                                   <option value="RCU">Recurring</option>
                                   <option value="STEP">Range(step)</option>
@@ -422,7 +425,7 @@
                             <div class="form-group row">
                               <label for="minmax-buttons" class="col-5 col-form-label" id="addChargesLabel">Rate Category</label>
                               <div class="col-7">
-                                <select class="form-control form-control-sm mb-1" id="addChargesInput" formControlName="rateCategory">
+                                <select class="form-select form-control-sm mb-1" id="addChargesInput" formControlName="rateCategory">
                                   <option value="TX">Tax</option>
                                   <option value="AC">Additional Charge</option>
                                   <option value="DT">Deductible</option>
@@ -438,14 +441,8 @@
                           <button type="button" class="btn btn-outline-primary " id="cancel"
                           data-bs-dismiss="modal" #editchargeDeductables>Cancel</button>
                         </div>
-                        <div class="col-6">
-                          <div class="row">
-                            <div class="col-8">
-                            </div>
-                            <div class="col-4">
-                              <button type="button" class="btn btn-primary" id="ok" data-bs-dismiss="modal" (click)="UpdateChargesDeductibles()" >Ok</button>
-                            </div>
-                          </div>
+                        <div class="col-6 d-flex justify-content-end">
+                          <button type="button" class="btn btn-primary" id="ok" data-bs-dismiss="modal" (click)="UpdateChargesDeductibles()" >Update</button>
                         </div>
                       </div>
                     </div>
@@ -525,15 +522,15 @@
                     </li>
                   </ul>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-xl-4 d-flex justify-content-end">
                   <ul class="nav ">
                     <li class="nav-item">
-                      <a class="nav-link active" id="links" aria-current="page" data-bs-toggle="modal"
+                      <a class="nav-link active text-decoration-underline" id="links" aria-current="page" data-bs-toggle="modal"
                         data-bs-target=".bd-example-modal-lg">Detach</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                       <a class="nav-link" id="links" data-toggle="modal" data-bs-target=".bd-example2-modal-lg">View</a>
-                    </li>
+                    </li> -->
                   </ul>
                 </div>
               </div>
@@ -654,7 +651,7 @@
                   </div>
                 </div>
               </div>
-              <!-- <p-table #dt3 [value]="assignedProductExcludedTaxes" selectionMode="single" [resizableColumns]="true" styleClass="p-datatable-sm"
+              <p-table #dt3 [value]="assignedProductExcludedTaxes" selectionMode="single" [resizableColumns]="true" styleClass="p-datatable-sm"
                 responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true" [paginator]="true" [rows]="10"
                 [scrollable]="true" scrollDirection="horizontal" [showCurrentPageReport]="true"
                 currentPageReportTemplate=" {first} - {last} of {totalRecords}" [globalFilterFields]="['description']">
@@ -665,11 +662,11 @@
                     <th pSortableColumn="Product Desc">Product Desc<p-sortIcon field="Product Desc"></p-sortIcon></th>
                   </tr>
                 </ng-template>
-                <ng-template let-assignedProductExcludedTaxe pTemplate="body">
-                  <tr style="border-bottom:none;" [pSelectableRow]="selected" [value]="assignedProductExcludedTaxe"
-                    (click)="selectProductExcluded(assignedProductExcludedTaxe.code)">
-                    <td>{{assignedProductExcludedTaxe.code}}</td>
-                    <td>{{assignedProductExcludedTaxe.description}}</td>
+                <ng-template let-assignedProductExcludedTaxes pTemplate="body">
+                  <tr style="border-bottom:none;" [pSelectableRow]="selected" 
+                    (click)="selectProductExcluded(assignedProductExcludedTaxes.code)">
+                    <td>{{assignedProductExcludedTaxes.code}}</td>
+                    <td>{{assignedProductExcludedTaxes.description}}</td>
                     
                   </tr>
                 </ng-template>
@@ -685,7 +682,7 @@
                 <ng-template pTemplate="paginatorright">
                   <p-button type="button" icon="pi pi-cloud" styleClass="p-button-text"></p-button>
                 </ng-template>
-              </p-table> -->
+              </p-table>
             </div>
   
           </div>
