VQ-105: Unit testing & bug fixes

--- a/src/app/features/auth/verification/verification.component.html
+++ b/src/app/features/auth/verification/verification.component.html
@@ -20,7 +20,7 @@
                         <i class="fa-solid {{account.icon}}"></i>
                     </div>
                     <div class="col-sm-10 text-start account-info">
-                        <span>{{ account.type }}</span> <br>
+                        <span>Via {{ account.type }}: </span> <br>
                         <span>{{ account.name | lowercase}}</span>
                     </div>
                 </div>
